# flodeck

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
examples/: flodeck_input.txt  frontier.py  general.py  streamed.py  theory.py
src/flodeck/: __init__.py  backlog.py  cli.py  engine.py  enums.py  job.py  policy.py  pool.py  scheduler.py  workload.py
tests/: conftest.py  test_backlog.py  test_cli.py  test_engine.py  test_job.py  test_policy.py  test_pool.py  test_scheduler.py  test_workload.py
